# tree-evolution

./: .gitignore  .pre-commit-config.yaml  Containerfile  LICENSE  justfile  pyproject.toml
hooks/: pre-commit
jupytext/: evaluate.py  evolution.py  leap_example.py  optimize.py  problem_simple.py
jupytext/problems/: PINN_Laplace_Gram.py
notebooks/: .gitignore
src/tree_evolution/: evolution.py  io.py  nb.py  nn.py  op.py  tree.py
