[project]
name = "tree-evolution"
version = "0.1.0"
description = "Evolutionary algorithm on space of trees"
authors = [
    { name = "Marcin Łoś", email = "los@agh.edu.pl"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
    "torch>=2.9.0",
    "leap_ec>=0.8.2",
    "papermill>=2.7.0",
]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-watcher>=0.6.3",
    "ruff>=0.15.4",
]
notebooks = [
    "jupyterlab>=4.5.5",
    "jupyterlab-myst>=2.6.0",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.8",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.jupytext.formats]
"notebooks/" = "ipynb"
"jupytext/" = "py:percent"

[tool.ruff]
src = [
    "src",
    "tests",
    "jupytext",
]
exclude = ["jupytext/problems/*"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle
    "F",     # Pyflakes
    "D",     # pydoc
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "PT",    # flake8-pytest-style
    "I",     # isort
]

# ignore missing docstrings
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
