[project]
name = "tree-evolution"
version = "0.1.0"
description = "PINN with activation functions selected by an evolutionary algorithm on a space of trees"
authors = [
    { name = "Marcin Łoś", email = "los@agh.edu.pl"},
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=2.0.2",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
    "torch>=2.9.0",
    "leap_ec>=0.8.2",
    "papermill>=2.7.0",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-watcher>=0.6.3",
    "ruff>=0.15.4",
]
notebooks = [
    "jupyterlab>=4.5.5",
    "jupyterlab-myst>=2.6.0",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
cpu = [ "torch>=2.9.0" ]
gpu = [ "torch>=2.9.0" ]

[tool.uv]
default-groups = "all"
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-gpu", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.jupytext.formats]
"notebooks/" = "ipynb"
"jupytext/" = "py:percent"

[tool.ruff]
src = [
    "src",
    "tests",
    "jupytext",
]
exclude = ["jupytext/problems/*"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle
    "F",     # Pyflakes
    "D",     # pydoc
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "PT",    # flake8-pytest-style
    "I",     # isort
]

# ignore missing docstrings
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright]
include = ["src"]
